// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SheetsFileWidget selects from file picker 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="input-group"
    >
      <input
        class="form-control"
        disabled=""
        id="spreadsheetId"
        type="text"
        value="Test Sheet"
      />
      <div
        class="input-group-append"
      >
        <button
          class="btn btn-info"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`SheetsFileWidget smoke test 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="input-group"
    >
      <input
        class="form-control"
        disabled=""
        id="spreadsheetId"
        name="spreadsheetId"
        type="text"
        value=""
      />
      <div
        class="input-group-append"
      >
        <button
          class="btn btn-info"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;
